--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
 	<div class="main-container">
+	<h1>Tic-Tac-Toe</h1>
 		<div class="board">
-			    <div class='cell' data-indx = "0" ></div>
-                <div class='cell' data-indx = "1" ></div>
+			    <div class='cell' data-indx = "0" >X</div>
+                <div class='cell' data-indx = "1" >O</div>
                 <div class='cell' data-indx = "2" ></div>
                 <div class='cell' data-indx = "3" ></div>
                 <div class='cell' data-indx = "4" ></div>
@@ -18,6 +19,7 @@
                 <div class='cell' data-indx = "7" ></div>
                 <div class='cell' data-indx = "8" ></div>
 		</div>
+		<div class="start">Start</div>
 	</div>
 </body>
 </html>
