terminal function update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 <div class='cell' data-indx = "7" ></div>
                 <div class='cell' data-indx = "8" ></div>
 		</div>
-		<div class="start">Start</div>
+		<div id="start">Start</div>
 	</div>
+	<script src="js/controls.js"></script>
 </body>
 </html>
