--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -12,13 +12,11 @@
   <script src="lib/jasmine-2.5.2/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="../js/state.js"></script>
-  <script src="../js/game.js"></script>
+  <script src="../js/main.js"></script>
 
   <!-- include spec files here... -->
   <!-- <script src="spec/SpecHelper.js"></script> -->
-  <script src="spec/stateSpec.js"></script>
-  <script src="spec/gameSpec.js"></script>
+  <script src="spec/mainSpec.js"></script>
 
 </head>
 
